first HTML section updated

--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-      hello world, we are software developers.
+      
   <body>
+      <div class="survey-wrapper">
+        <div class="survey-inner-wrapper">
+          <div class="section one" id="title">
+            <h1>freeCodeCamp Survey Form</h1>
+            <p id="description"><em>Thank you for taking the time to help us improve the platform </em></p>
+          </div>
+        </div>
+        <div class="section-inner-wrapper">
+          <form id="survey-form">
+            <label>Name<input type="text" placeholder="Enter your name"></label>
+            <label>Email<input type="email" placeholder="Enter your Email"></label>
+            <label>Age<input type="number" placeholder="Age"></label>
+          </form>
+        </div>
+      </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
